Simplify setting a page title

--- a/app/views/about-your-organisation.html
+++ b/app/views/about-your-organisation.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'About your organisation' %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "About your organisation" %}
 {% block breadcrumbs %}{{ macros.breadcrumbs(breadcrumbItems())}}{% endblock %}
 
 {% block content %}
