--- a/app/views/about-your-organisation/contact.html
+++ b/app/views/about-your-organisation/contact.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'Contact details' %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Contact details" %}
 {% block backLink %}{{ macros.backLink('/about-your-organisation') }}{% endblock %}
 
 {% block content %}
