--- a/app/views/about-your-organisation/edit.html
+++ b/app/views/about-your-organisation/edit.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'Edit ‘About your organisation’' %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Edit ‘About your organisation’" %}
 {% block backLink %}{{ macros.backLink('/about-your-organisation') }}{% endblock %}
 
 {% block content %}
