--- a/app/views/course/problems.html
+++ b/app/views/course/problems.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'Problems with this course' %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Problems with this course" %}
 {% block backLink %}{{ macros.backLink(course.path) }}{% endblock %}
 
 {% block content %}
