--- a/app/views/course/vacancies-full-part.html
+++ b/app/views/course/vacancies-full-part.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'Vacancies' %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Vacancies" %}
 {% block backLink %}{{ macros.backLink() }}{% endblock %}
 
 {% block content %}
