--- a/app/views/feature-unavailable.html
+++ b/app/views/feature-unavailable.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'Request a change to this course' %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Request a change to this course" %}
 
 {% block content %}
   {% set messageHtml %}
