--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,12 +1,7 @@
-
 {% extends "layout.html" %}
-
-{% block pageTitle %}
-  GOV.UK Prototype Kit
-{% endblock %}
+{% set title = "GOV.UK Prototype Kit" %}
 
 {% block content %}
-
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-xl">
