--- a/app/views/location.html
+++ b/app/views/location.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %}
-{% set title = school.name or 'Add a location' %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = school.name or "Add a location" %}
 {% block breadcrumbs %}{{ macros.breadcrumbs(breadcrumbItems([
   {
     href: "/locations",
