--- a/app/views/locations.html
+++ b/app/views/locations.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'Locations' %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Locations" %}
 {% block breadcrumbs %}{{ macros.breadcrumbs(breadcrumbItems())}}{% endblock %}
 
 {% block content %}
