--- a/app/views/manage.html
+++ b/app/views/manage.html
@@ -1,10 +1,7 @@
 {% extends "layout.html" %}
-{% set title = 'Publish teacher training courses' %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Publish teacher training courses" %}
 
 {% block content %}
-
-
   <h1 class="govuk-heading-xl">
     {{ title }}
   </h1>
