--- a/app/views/new-features.html
+++ b/app/views/new-features.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'New features coming to Publish' %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "New features coming to Publish" %}
 {% block backLink %}{{ macros.backLink('/') }}{% endblock %}
 
 {% block content %}
