--- a/app/views/new-location/address.html
+++ b/app/views/new-location/address.html
@@ -1,6 +1,5 @@
-{% set title = 'Is this name and address correct?' %}
 {% extends "layout.html" %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Is this name and address correct?" %}
 {% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
 
 {% block content %}
