--- a/app/views/new-location/region-name.html
+++ b/app/views/new-location/region-name.html
@@ -1,6 +1,5 @@
-{% set title = 'Region name' %}
 {% extends "layout.html" %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Region name" %}
 {% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
 
 {% block content %}
