--- a/app/views/new-location/region-schools.html
+++ b/app/views/new-location/region-schools.html
@@ -1,6 +1,5 @@
-{% set title = 'List the schools you work with in this area' %}
 {% extends "layout.html" %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "List the schools you work with in this area" %}
 {% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
 
 {% block content %}
