--- a/app/views/new-location/type.html
+++ b/app/views/new-location/type.html
@@ -1,6 +1,5 @@
-{% set title = 'What type of training location?' %}
 {% extends "layout.html" %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "What type of training location?" %}
 {% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
 
 {% block content %}
