--- a/app/views/new/accredited-body.html
+++ b/app/views/new/accredited-body.html
@@ -1,6 +1,5 @@
-{% set title = 'Who is the accredited body?' %}
 {% extends "layout.html" %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Who is the accredited body?" %}
 {% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
 
 {% block content %}
