--- a/app/views/new/age-range.html
+++ b/app/views/new/age-range.html
@@ -1,6 +1,5 @@
-{% set title = 'Specify an age range' %}
 {% extends "layout.html" %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Specify an age range" %}
 {% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
 
 {% block content %}
