--- a/app/views/new/apprenticeship.html
+++ b/app/views/new/apprenticeship.html
@@ -1,6 +1,5 @@
-{% set title = 'Is this a teaching apprenticeship?' %}
 {% extends "layout.html" %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Is this a teaching apprenticeship?" %}
 {% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
 
 {% block content %}
