--- a/app/views/new/copy-content.html
+++ b/app/views/new/copy-content.html
@@ -1,6 +1,5 @@
-{% set title = 'Do you want to copy content from another course?' %}
 {% extends "layout.html" %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Do you want to copy content from another course?" %}
 {% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
 
 {% block content %}
