--- a/app/views/new/duration.html
+++ b/app/views/new/duration.html
@@ -1,6 +1,5 @@
-{% set title = 'Which phase is this course for?' %}
 {% extends "layout.html" %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Which phase is this course for?" %}
 {% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
 
 {% block content %}
