--- a/app/views/new/further/outcome.html
+++ b/app/views/new/further/outcome.html
@@ -1,6 +1,5 @@
-{% set title = 'Pick a course outcome' %}
 {% extends "layout.html" %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Pick a course outcome" %}
 {% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
 
 {% block content %}
