--- a/app/views/new/languages.html
+++ b/app/views/new/languages.html
@@ -1,6 +1,5 @@
-{% set title %}Pick all the languages for this course{% endset %}
 {% extends "layout.html" %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Pick all the languages for this course" %}
 {% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
 
 {% block content %}
