--- a/app/views/new/main-language.html
+++ b/app/views/new/main-language.html
@@ -1,6 +1,5 @@
-{% set title %}Is one of these languages more important?{% endset %}
 {% extends "layout.html" %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Is one of these languages more important?" %}
 {% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
 
 {% block content %}
