--- a/app/views/new/minimum-gcses-mvp.html
+++ b/app/views/new/minimum-gcses-mvp.html
@@ -1,6 +1,5 @@
-{% set title = 'GCSE requirements for applicants' %}
 {% extends "layout.html" %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "GCSE requirements for applicants" %}
 {% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
 
 {% block content %}
