--- a/app/views/new/minimum-gcses.html
+++ b/app/views/new/minimum-gcses.html
@@ -1,6 +1,5 @@
-{% set title = 'Candidates with pending GCSEs' %}
 {% extends "layout.html" %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Candidates with pending GCSEs" %}
 {% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
 
 {% block content %}
