--- a/app/views/new/phase.html
+++ b/app/views/new/phase.html
@@ -1,6 +1,5 @@
-{% set title = 'What type of new course?' %}
 {% extends "layout.html" %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "What type of new course?" %}
 {% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
 
 {% block content %}
