--- a/app/views/new/start-date.html
+++ b/app/views/new/start-date.html
@@ -1,6 +1,5 @@
-{% set title = 'When does the course start?' %}
 {% extends "layout.html" %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "When does the course start?" %}
 {% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
 
 {% block content %}
