--- a/app/views/no-access.html
+++ b/app/views/no-access.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'We don’t know which organisation you’re part of' %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "We don’t know which organisation you’re part of" %}
 
 {% block content %}
   <div class="govuk-grid-row">
