--- a/app/views/onboarding/accept-terms.html
+++ b/app/views/onboarding/accept-terms.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'Before you begin' %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Before you begin" %}
 
 {% block content %}
   <div class="govuk-grid-row">
