--- a/app/views/onboarding/apply-settings.html
+++ b/app/views/onboarding/apply-settings.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'UCAS Apply preferences' %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "UCAS Apply preferences" %}
 {% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
 
 {% block content %}
