--- a/app/views/onboarding/code.html
+++ b/app/views/onboarding/code.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'Your UCAS training provider code' %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Your UCAS training provider code" %}
 {% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
 
 {% block content %}
