--- a/app/views/onboarding/gt12.html
+++ b/app/views/onboarding/gt12.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'Pick a letter for successful applicants' %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Pick a letter for successful applicants" %}
 {% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
 
 {% block content %}
