--- a/app/views/onboarding/location.html
+++ b/app/views/onboarding/location.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'Add your first location' %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Add your first location" %}
 {% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
 {% set code = 'A' %}
 
