--- a/app/views/onboarding/name.html
+++ b/app/views/onboarding/name.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'Is your organisation name right?' %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Is your organisation name right?" %}
 {% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
 {% set originalName = data['training-provider-name'] %}
 
