--- a/app/views/onboarding/request-access.html
+++ b/app/views/onboarding/request-access.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'Request access for people' %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Request access for people" %}
 {% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
 
 {% block content %}
