--- a/app/views/onboarding/ucas-contacts.html
+++ b/app/views/onboarding/ucas-contacts.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'Contacts for UCAS' %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Contacts for UCAS" %}
 {% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
 
 {% block content %}
