--- a/app/views/preview.html
+++ b/app/views/preview.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block pageTitle %}Preview{% endblock %}
+{% set title = "Preview" %}
 {% block backLink %}{{ macros.backLink(course.path, 'Back to course') }}{% endblock %}
 
 {% block content %}
