--- a/app/views/rollover/confirm.html
+++ b/app/views/rollover/confirm.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'Check your answers before confirming' %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Check your answers before confirming" %}
 {% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
 
 {% block content %}
