--- a/app/views/rollover/locations.html
+++ b/app/views/rollover/locations.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'Pick locations' %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Pick locations" %}
 {% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
 
 {% block content %}
