--- a/app/views/rollover/start.html
+++ b/app/views/rollover/start.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'Rollover your courses and locations' %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Rollover your courses and locations" %}
 {% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
 
 {% block content %}
