--- a/app/views/school-autocomplete.html
+++ b/app/views/school-autocomplete.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'Add your partner schools' %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Add your partner schools" %}
 
 {% block content %}
 <style>
