--- a/app/views/support.html
+++ b/app/views/support.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'Get support and guidance' %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Get support and guidance" %}
 
 {% block content %}
   {% set messageHtml %}
