--- a/app/views/ucas/admin.html
+++ b/app/views/ucas/admin.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'UCAS administrator' %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "UCAS administrator" %}
 {% block backLink %}{{ macros.backLink('/ucas/apply-preferences') }}{% endblock %}
 
 {% block content %}
