--- a/app/views/ucas/alerts.html
+++ b/app/views/ucas/alerts.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'Email alerts for new applications' %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Email alerts for new applications" %}
 {% block backLink %}{{ macros.backLink('/ucas/apply-preferences') }}{% endblock %}
 
 {% block content %}
