--- a/app/views/ucas/fraud-contact.html
+++ b/app/views/ucas/fraud-contact.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'Fraud contact' %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Fraud contact" %}
 {% block backLink %}{{ macros.backLink('/ucas/apply-preferences') }}{% endblock %}
 
 {% block content %}
