--- a/app/views/ucas/postal-address.html
+++ b/app/views/ucas/postal-address.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'Postal address' %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Postal address" %}
 {% block backLink %}{{ macros.backLink('/ucas/apply-preferences') }}{% endblock %}
 
 {% block content %}
