--- a/app/views/ucas/ucas-correspondent.html
+++ b/app/views/ucas/ucas-correspondent.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'UCAS Teacher Training (UTT) correspondent' %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "UCAS Teacher Training (UTT) correspondent" %}
 {% block backLink %}{{ macros.backLink('/ucas/apply-preferences') }}{% endblock %}
 
 {% block content %}
