--- a/app/views/ucas/web-link-correspondent.html
+++ b/app/views/ucas/web-link-correspondent.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'UCAS web-link correspondent' %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "UCAS web-link correspondent" %}
 {% block backLink %}{{ macros.backLink('/ucas/apply-preferences') }}{% endblock %}
 
 {% block content %}
