--- a/app/views/your-organisation.html
+++ b/app/views/your-organisation.html
@@ -1,10 +1,7 @@
 {% extends "layout.html" %}
-{% block pageTitle %}Your organisation{% endblock %}
+{% block title = "Your organisation" %}
 
 {% block content %}
-
-
-
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <a href="/organisation" class="govuk-back-link">Back</a>
