--- a/app/views/your-organisations.html
+++ b/app/views/your-organisations.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'Organisations' %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Organisations" %}
 
 {% block content %}
   <h1 class="govuk-heading-xl">
