--- a/app/views/accredited-body.html
+++ b/app/views/accredited-body.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'Courses as an accredited body' %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Courses as an accredited body" %}
 {% block breadcrumbs %}{{ macros.breadcrumbs(breadcrumbItems())}}{% endblock %}
 {% set newCourseFormUrl = 'https://goo.gl/forms/HJ17Hob3728X3mTc2' if data['new-course']['include-accredited'] else 'https://goo.gl/forms/kdNksCuwcz7TVtNF2' %}
 
