--- a/app/views/course/about-this-course.html
+++ b/app/views/course/about-this-course.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'About this course' %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "About this course" %}
 {% block backLink %}{{ macros.backLink(course.path) }}{% endblock %}
 
 {% block content %}
