--- a/app/views/course/vacancies-locations.html
+++ b/app/views/course/vacancies-locations.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'Edit vacancies' %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Edit vacancies" %}
 {% block backLink %}{{ macros.backLink() }}{% endblock %}
 
 {% block content %}
