--- a/app/views/course/withdraw.html
+++ b/app/views/course/withdraw.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'Are you sure you want to withdraw this course?' %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Are you sure you want to withdraw this course?" %}
 {% block backLink %}{{ macros.backLink(course.path) }}{% endblock %}
 
 {% block content %}
