--- a/app/views/guidance.html
+++ b/app/views/guidance.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'Guidance for Publish teacher training courses' %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Guidance for Publish teacher training courses" %}
 
 {% block content %}
 <div class="govuk-grid-row">
