--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -38,7 +38,7 @@
 {% endblock %}
 
 {% block pageTitle %}
-  GOV.UK Prototype Kit
+  {% if title %}{{ title }} - {% endif %}{{ serviceName }} - GOV.UK
 {% endblock %}
 
 {% block header %}
