--- a/app/views/new-location/pick-location.html
+++ b/app/views/new-location/pick-location.html
@@ -1,6 +1,5 @@
-{% set title = 'Pick a school, college or university' %}
 {% extends "layout.html" %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Pick a school, college or university" %}
 {% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
 
 {% block content %}
