--- a/app/views/new/applications-open.html
+++ b/app/views/new/applications-open.html
@@ -1,6 +1,5 @@
-{% set title = 'When will applications open?' %}
 {% extends "layout.html" %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "When will applications open?" %}
 {% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
 
 {% block content %}
