--- a/app/views/new/confirm.html
+++ b/app/views/new/confirm.html
@@ -1,6 +1,5 @@
-{% set title = 'Check your answers before confirming' %}
 {% extends "layout.html" %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Check your answers before confirming" %}
 {% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
 {% set showChangeLinks = true %}
 {% set showTitleAndDescription = true %}
