--- a/app/views/new/funding.html
+++ b/app/views/new/funding.html
@@ -1,6 +1,5 @@
-{% set title = 'Is it fee paying or salaried?' %}
 {% extends "layout.html" %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Is it fee paying or salaried?" %}
 {% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
 
 {% block content %}
