--- a/app/views/new/title.html
+++ b/app/views/new/title.html
@@ -1,6 +1,5 @@
-{% set title = 'Is this course title right?' %}
 {% extends "layout.html" %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Is this course title right?" %}
 {% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
 {% set isFe = (data[code + '-phase'] == 'Further education') %}
 
