--- a/app/views/new/training-locations.html
+++ b/app/views/new/training-locations.html
@@ -1,6 +1,5 @@
-{% set title = 'Pick the locations for this course' %}
 {% extends "layout.html" %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Pick the locations for this course" %}
 {% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
 
 {% block content %}
