--- a/app/views/organisation-details.html
+++ b/app/views/organisation-details.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block pageTitle %}Organisation{% endblock %}
+{% set title = "Organisation" %}
 
 {% block content %}
   <h1 class="govuk-heading-xl">
