--- a/app/views/rollover/courses.html
+++ b/app/views/rollover/courses.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'Pick courses' %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Pick courses" %}
 {% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
 
 {% block content %}
