--- a/app/views/time-spent-where.html
+++ b/app/views/time-spent-where.html
@@ -1,10 +1,7 @@
 {% extends "layout.html" %}
-{% block pageTitle %}Sign in{% endblock %}
+{% set title = "Sign in" %}
 
 {% block content %}
-
-
-
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <form>
