--- a/app/views/ucas/finance-contact.html
+++ b/app/views/ucas/finance-contact.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'Finance contact' %}
-{% block pageTitle %}{{ title }}{% endblock %}
+{% set title = "Finance contact" %}
 {% block backLink %}{{ macros.backLink('/ucas/apply-preferences') }}{% endblock %}
 
 {% block content %}
