Simplify setting a back link

--- a/app/views/about-your-organisation/contact.html
+++ b/app/views/about-your-organisation/contact.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% set title = "Contact details" %}
-{% block backLink %}{{ macros.backLink('/about-your-organisation') }}{% endblock %}
+{% set backLink = "/about-your-organisation" %}
 
 {% block content %}
 {% include "about-your-organisation/_errors.html" %}
