--- a/app/views/course/requirements.html
+++ b/app/views/course/requirements.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% set title = "Requirements and eligibility" %}
-{% block backLink %}{{ macros.backLink(course.path) }}{% endblock %}
+{% set backLink = course.path %}
 
 {% block content %}
   <h1 class="govuk-heading-xl">
