--- a/app/views/course/vacancies.html
+++ b/app/views/course/vacancies.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% set title = "Edit vacancies" %}
-{% block backLink %}{{ macros.backLink('/courses') }}{% endblock %}
+{% set backLink = "/courses" %}
 
 {% block content %}
   {% set table %}
