--- a/app/views/new-features.html
+++ b/app/views/new-features.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% set title = "New features coming to Publish" %}
-{% block backLink %}{{ macros.backLink('/') }}{% endblock %}
+{% set backLink = "/" %}
 
 {% block content %}
   <h1 class="govuk-heading-xl">
