--- a/app/views/new-location/region-schools.html
+++ b/app/views/new-location/region-schools.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% set title = "List the schools you work with in this area" %}
-{% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
+{% set backLink = paths.back %}
 
 {% block content %}
   <style>
