--- a/app/views/new-location/type.html
+++ b/app/views/new-location/type.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% set title = "What type of training location?" %}
-{% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
+{% set backLink = paths.back %}
 
 {% block content %}
   <h1 class="govuk-heading-xl">
