--- a/app/views/new/minimum-gcses-mvp.html
+++ b/app/views/new/minimum-gcses-mvp.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% set title = "GCSE requirements for applicants" %}
-{% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
+{% set backLink = paths.back %}
 
 {% block content %}
   <!-- examples:
