--- a/app/views/onboarding/location.html
+++ b/app/views/onboarding/location.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% set title = "Add your first location" %}
-{% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
+{% set backLink = paths.back %}
 {% set code = 'A' %}
 
 {% block content %}
