--- a/app/views/rolled-over.html
+++ b/app/views/rolled-over.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% set title = "Begin preparing for the next cycle" %}
-{% block backLink %}{{ macros.backLink('/transition') }}{% endblock %}
+{% set backLink = "/transition" %}
 
 {% block content %}
   <div class="govuk-grid-row">
