--- a/app/views/rollover/courses.html
+++ b/app/views/rollover/courses.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% set title = "Pick courses" %}
-{% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
+{% set backLink = paths.back %}
 
 {% block content %}
   <div class="govuk-grid-row">
