--- a/app/views/new-location/address.html
+++ b/app/views/new-location/address.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% set title = "Is this name and address correct?" %}
-{% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
+{% set backLink = paths.back %}
 
 {% block content %}
   <h1 class="govuk-heading-xl">
