--- a/app/views/new-location/confirm.html
+++ b/app/views/new-location/confirm.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% set title = "Check your answers before confirming" %}
-{% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
+{% set backLink = paths.back %}
 
 {% block content %}
   <div class="govuk-grid-row">
