--- a/app/views/new-location/edit.html
+++ b/app/views/new-location/edit.html
@@ -4,7 +4,7 @@
 {% else %}
   {% set title = data[code + '-name'] %}
 {% endif %}
-{% block backLink %}{{ macros.backLink('/locations') }}{% endblock %}
+{% set backLink = "/locations" %}
 
 {% block content %}
   <form action="{{ paths.next }}" method="post">
