--- a/app/views/new-location/pick-location.html
+++ b/app/views/new-location/pick-location.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% set title = "Pick a school, college or university" %}
-{% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
+{% set backLink = paths.back %}
 
 {% block content %}
   <h1 class="govuk-heading-xl">
