--- a/app/views/new/confirm.html
+++ b/app/views/new/confirm.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% set title = "Check your answers before confirming" %}
-{% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
+{% set backLink = paths.back %}
 {% set showChangeLinks = true %}
 {% set showTitleAndDescription = true %}
 {% set isNotPublished = true %}
