--- a/app/views/new/copy-content.html
+++ b/app/views/new/copy-content.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% set title = "Do you want to copy content from another course?" %}
-{% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
+{% set backLink = paths.back %}
 
 {% block content %}
   <div class="govuk-grid-row">
