--- a/app/views/new/full-time-part-time.html
+++ b/app/views/new/full-time-part-time.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% set title = "Full time or part time?" %}
-{% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
+{% set backLink = paths.back %}
 
 {% block content %}
   <h1 class="govuk-heading-xl">
