--- a/app/views/new/outcome.html
+++ b/app/views/new/outcome.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% set title = "Pick a course outcome" %}
-{% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
+{% set backLink = paths.back %}
 
 {% block content %}
   <h1 class="govuk-heading-xl">
