--- a/app/views/new/start-date.html
+++ b/app/views/new/start-date.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% set title = "When does the course start?" %}
-{% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
+{% set backLink = paths.back %}
 
 {% block content %}
   <h1 class="govuk-heading-xl">
