--- a/app/views/new/subject.html
+++ b/app/views/new/subject.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% set title %}Pick a {{ data[code + "-phase"] | lower }} subject{% endset %}
-{% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
+{% set backLink = paths.back %}
 
 {% block content %}
   <h1 class="govuk-heading-xl">
