--- a/app/views/new/training-locations.html
+++ b/app/views/new/training-locations.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% set title = "Pick the locations for this course" %}
-{% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
+{% set backLink = paths.back %}
 
 {% block content %}
   <h1 class="govuk-heading-xl">
