--- a/app/views/onboarding/contact.html
+++ b/app/views/onboarding/contact.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% set title = "Contact details" %}
-{% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
+{% set backLink = paths.back %}
 
 {% block content %}
 
