--- a/app/views/onboarding/name.html
+++ b/app/views/onboarding/name.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% set title = "Is your organisation name right?" %}
-{% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
+{% set backLink = paths.back %}
 {% set originalName = data['training-provider-name'] %}
 
 {% block content %}
