--- a/app/views/onboarding/request-access.html
+++ b/app/views/onboarding/request-access.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% set title = "Request access for people" %}
-{% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
+{% set backLink = paths.back %}
 
 {% block content %}
   <div class="govuk-grid-row">
