--- a/app/views/ucas/fraud-contact.html
+++ b/app/views/ucas/fraud-contact.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% set title = "Fraud contact" %}
-{% block backLink %}{{ macros.backLink('/ucas/apply-preferences') }}{% endblock %}
+{% set backLink = "/ucas/apply-preferences" %}
 
 {% block content %}
   <h1 class="govuk-heading-xl">
