--- a/app/views/locations.html
+++ b/app/views/locations.html
@@ -1,6 +1,11 @@
 {% extends "layout.html" %}
 {% set title = "Locations" %}
-{% block breadcrumbs %}{{ macros.breadcrumbs(breadcrumbItems())}}{% endblock %}
+
+{% block pageNavigation %}
+  {{ govukBreadcrumbs({
+    items: breadcrumbItems()
+  }) }}
+{% endblock %}
 
 {% block content %}
   {% if justCreated %}
