--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -65,12 +65,12 @@
     html: "This is a prototype of a new service. Some parts of this prototype do not work yet."
   }) }}
 
-  {% block breadcrumbs %}{% endblock %}
-
-  {{ govukBackLink({
-    text: backLinkText or "Back",
-    href: backLink
-  }) if backLink }}
+  {% block pageNavigation %}
+    {{ govukBackLink({
+      text: backLinkText or "Back",
+      href: backLink
+    }) if backLink }}
+  {% endblock %}
 {% endblock %}
 
 {% if useAutoStoreData %}
