--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -11,26 +11,22 @@
 {% endblock %}
 
 {% block content %}
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-xl">
-        {% if data['rolled-over'] %}
-          {% if data['next-cycle'] %}
-            Next cycle (2020&thinsp;–&thinsp;2021)
-          {% else %}
-            Current cycle (2019&thinsp;–&thinsp;2020)
-          {% endif %}
-        {% else %}
-          {{ data['training-provider-name'] }}
-        {% endif %}
-      </h1>
-    </div>
-  </div>
+  <h1 class="govuk-heading-xl">
+    {% if data["rolled-over"] %}
+      {% if data["next-cycle"] %}
+        Next cycle (2020&thinsp;–&thinsp;2021)
+      {% else %}
+        Current cycle (2019&thinsp;–&thinsp;2020)
+      {% endif %}
+    {% else %}
+      {{ data['training-provider-name'] }}
+    {% endif %}
+  </h1>
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      {% if data['rolled-over'] %}
-        {% if data['next-cycle'] %}
+      {% if data["rolled-over"] %}
+        {% if data["next-cycle"] %}
           <p class="govuk-body-l">Prepare your courses and locations for the next cycle. All your courses, locations and details have been copied from the current cycle.</p>
           <hr class="govuk-section-break govuk-section-break--m">
         {% else %}
@@ -39,98 +35,78 @@
         {% endif %}
       {% endif %}
 
-      {% if not (data['rolled-over'] and data['next-cycle']) %}
-        <div class="govuk-!-margin-bottom-8">
-          <h2 class="govuk-heading-m">
-            <a href="/about-your-organisation">About your organisation</a>
-          </h2>
-          <p>Use this section to:</p>
-          <ul class="govuk-list govuk-list--bullet">
-            <li>write about your organisation</li>
-            <li>set your contact details</li>
-            <li>publish this information on all course pages</li>
-          </ul>
-        </div>
+      {% if not (data["rolled-over"] and data["next-cycle"]) %}
+        <h2 class="govuk-heading-m">
+          <a href="/about-your-organisation">About your organisation</a>
+        </h2>
+        <p>Use this section to:</p>
+        <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-8">
+          <li>write about your organisation</li>
+          <li>set your contact details</li>
+          <li>publish this information on all course pages</li>
+        </ul>
       {% endif %}
 
-      <div class="govuk-!-margin-bottom-8">
+      <h2 class="govuk-heading-m">
+        <a href="/courses">Courses</a>
+      </h2>
+
+      <p>Use this section to:</p>
+      <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-8">
+        <li>write about each course</li>
+        <li>preview and publish courses</li>
+        <li>copy content between courses</li>
+        {% if not data["next-cycle"] %}
+        <li>manage vacancies for each course</li>
+        {% endif %}
+        <li>add new courses</li>
+      </ul>
+
+      {% if data['is-accredited-body'] and not (data["rolled-over"] and data["next-cycle"]) %}
         <h2 class="govuk-heading-m">
-          <a href="/courses">Courses</a>
+          <a href="/accredited-body">Courses as an accredited body</a>
         </h2>
 
         <p>Use this section to:</p>
-        <ul class="govuk-list govuk-list--bullet">
-          <li>preview and publish courses</li>
-          <li>write about each course</li>
-          <li>copy content between courses</li>
-          {% if not data['next-cycle'] %}
-          <li>manage vacancies for each course</li>
-          {% endif %}
-          <li>add new courses</li>
+        <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-8">
+          <li>see who lists you as their accredited body</li>
+          <li>see which courses you’re the accredited body for</li>
         </ul>
-      </div>
-
-      {% if data['is-accredited-body'] and not (data['rolled-over'] and data['next-cycle']) %}
-        <div class="govuk-!-margin-bottom-8">
-          <h2 class="govuk-heading-m">
-            <a href="/accredited-body">Courses as an accredited body</a>
-          </h2>
-
-          <p>Use this section to:</p>
-          <ul class="govuk-list govuk-list--bullet">
-            <li>see who lists you as their accredited body</li>
-            <li>see which courses you’re the accredited body for</li>
-          </ul>
-        </div>
       {% endif %}
 
-      <div class="govuk-!-margin-bottom-8">
-        <h2 class="govuk-heading-m">
-          <a href="/locations">Locations</a>
-        </h2>
+      <h2 class="govuk-heading-m">
+        <a href="/locations">Locations</a>
+      </h2>
 
-        <p>Use this section to:</p>
-        <ul class="govuk-list govuk-list--bullet">
-          <li>manage the locations that candidates select when applying</li>
-          <li>edit location names and addresses</li>
-          <li>add locations</li>
-        </ul>
-      </div>
+      <p>Use this section to:</p>
+      <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-8">
+        <li>manage the locations that candidates select when applying</li>
+        <li>edit location names and addresses</li>
+        <li>add locations</li>
+      </ul>
     </div>
+
     <div class="govuk-grid-column-one-third">
-      {% if not data['rolled-over'] %}
-      <div class="status-box">
-        <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
-          <a href="/request-access">Request access</a>
-        </h2>
-        <p>Request a DfE Sign-in account for others who manage your courses.</p>
+      {% if not data["rolled-over"] %}
+        <div class="status-box">
+          <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
+            <a href="/request-access">Request access</a>
+          </h2>
+          <p>Request a DfE Sign-in account for others who manage your courses.</p>
 
-        <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
-          <a href="/ucas/apply-preferences">UCAS contacts</a>
-        </h2>
-        <p>Update or request UCAS contact details.</p>
+          <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
+            <a href="/ucas/apply-preferences">UCAS contacts</a>
+          </h2>
+          <p>Update or request UCAS contact details.</p>
 
-        <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
-        <h2 class="govuk-heading-s">Support and guidance</h2>
-        <p class="govuk-body">If you have a question, or you’ve had a problem using Publish, you can email:</p>
-        <p class="govuk-body govuk-!-margin-bottom-0">
-          <a class="govuk-link" href="mailto:becomingateacher@digital.education.gov.uk?subject=Support%20and%20guidance">becomingateacher<wbr>@digital.education.gov.uk</a>
-        </p>
-      </div>
+          <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+          <h2 class="govuk-heading-s">Support and guidance</h2>
+          <p class="govuk-body">If you have a question, or you’ve had a problem using Publish, you can email:</p>
+          <p class="govuk-body govuk-!-margin-bottom-0">
+            <a class="govuk-link" href="mailto:becomingateacher@digital.education.gov.uk?subject=Support%20and%20guidance">becomingateacher<wbr>@digital.education.gov.uk</a>
+          </p>
+        </div>
       {% endif %}
     </div>
-    <!-- <div class="govuk-grid-column-one-third">
-      <div class="status-box">
-        <h2 class="govuk-heading-m">Guidance</h2>
-        <ul class="govuk-list">
-          <li>
-            <a href="#">How to publish courses</a>
-          </li>
-          <li>
-            <a href="#">Writing content for your courses</a>
-          </li>
-        </ul>
-      </div>
-    </div> -->
   </div>
 {% endblock %}
