--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -45,7 +45,7 @@
 
 {% block header %}
   {{ govukHeader({
-    homepageUrl: '#',
+    homepageUrl: "#",
     productName: serviceName,
     serviceUrl: "/cycles" if value("rolled-over") else "/",
     containerClasses: "govuk-width-container",
