--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -18,27 +18,22 @@
           <div class="govuk-success-summary" role="alert" aria-labelledby="success-summary-heading" tabindex="-1" data-module="govuk-error-summary" data-ga-event-form="success">
             <h3 class="govuk-success-summary__title" id="success-summary-heading">Email notification preferences for name@email.co.uk have been saved.</h3>
           </div>
-        </div>
         {% endif %}
       {% endset %}
     </div>
   </div>
 
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-xl">
-        {% if data['rolled-over'] %}
-          {% if data['next-cycle'] %}
-            Next cycle (2020&thinsp;–&thinsp;2021)
-          {% else %}
-            Current cycle (2019&thinsp;–&thinsp;2020)
-          {% endif %}
-        {% else %}
-          {{ data['training-provider-name'] }}
-        {% endif %}
-      </h1>
-    </div>
-  </div>
+  <h1 class="govuk-heading-xl">
+    {% if data["rolled-over"] %}
+      {% if data["next-cycle"] %}
+        Next cycle (2020&thinsp;–&thinsp;2021)
+      {% else %}
+        Current cycle (2019&thinsp;–&thinsp;2020)
+      {% endif %}
+    {% else %}
+      {{ data["training-provider-name"] }}
+    {% endif %}
+  </h1>
 
   {# <div class="app-banner app-banner--information app-banner--temporary-message">
     <div class="govuk-grid-row">
@@ -117,43 +112,26 @@
         <li>add locations</li>
       </ul>
     </div>
+
     <div class="govuk-grid-column-one-third">
       {% if not data["rolled-over"] %}
         <div class="status-box">
-          {# <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
+        {#
+          <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
             <a href="/notifications">Email notifications</a>
           </h2>
-          <p>Get email notifications about your courses</p> #}
+          <p>Get email notifications about your courses</p>
 
-          {# <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
+          <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
             <a href="/users">Users</a>
           </h2>
-          <p>View users who manage your courses.</p> #}
+          <p>View users who manage your courses.</p>
+        #}
 
           <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
-            <a href="/ucas/apply-preferences">UCAS contacts</a>
+            <a href="/users/">Users</a>
           </h2>
-          <p>Update or request UCAS contact details.</p>
-
-          <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
-            <a href="/users/users">Users</a>
-          </h2>
-          <p>See who has access to this account and invite new users.</p> #}
-
-          <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
-            <a href="/ucas/apply-preferences">UCAS contacts</a>
-          </h2>
-          <p>Update or request UCAS contact details.</p>
-
-          <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
-            <a href="/users/users">Users</a>
-          </h2>
-          <p>See who has access to this account and invite new users.</p> #}
-
-          <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
-            <a href="/ucas/apply-preferences">UCAS contacts</a>
-          </h2>
-          <p>Update or request UCAS contact details.</p>
+          <p>View users who manage your courses.</p>
 
           <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
             <a href="/ucas/apply-preferences">UCAS contacts</a>
